--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=0.6">
-<title>Pluton</title>
+<title>Titan</title>
 <link rel="icon" href="i.png" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css">
