--- a/about.html
+++ b/about.html
@@ -23,6 +23,22 @@ h3{
     color:rgb(255, 255, 255);
     -webkit-font-smoothing: antialiased;
    }
+   li{
+    font-family: Apple;
+        list-style-type: none;
+        color: rgb(255, 255, 255);
+        padding: 5px;
+        padding-left: 50px;
+        margin: 5px;
+        display: inline;
+        
+        font-size: 16px;
+        
+        font-feature-settings: 'kern';
+    -webkit-font-smoothing: antialiased;
+    font-synthesis: none;
+    -webkit-font-feature-settings: 'kern';
+}
    h4{
     margin: 0px;
     font-family: Apple;
