--- a/ind.html
+++ b/ind.html
@@ -96,7 +96,22 @@ h1>a{
     color:rgb(255, 255, 255);
     -webkit-font-smoothing: antialiased;
    }
-
+   li{
+    font-family: Apple;
+        list-style-type: none;
+        color: rgb(255, 255, 255);
+        padding: 5px;
+        padding-left: 50px;
+        margin: 5px;
+        display: inline;
+        
+        font-size: 16px;
+        
+        font-feature-settings: 'kern';
+    -webkit-font-smoothing: antialiased;
+    font-synthesis: none;
+    -webkit-font-feature-settings: 'kern';
+}
 </style>
 
 </head>
