--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@ padding: 0px;
 
 
 }    
+li{
+    font-family: Apple;
+        list-style-type: none;
+        color: rgb(255, 255, 255);
+        padding: 5px;
+        padding-left: 50px;
+        margin: 5px;
+        display: inline;
+        
+        font-size: 16px;
+        
+        font-feature-settings: 'kern';
+    -webkit-font-smoothing: antialiased;
+    font-synthesis: none;
+    -webkit-font-feature-settings: 'kern';
+}
 #u{
     position: fixed;
     margin: 0px;
