--- a/sup.html
+++ b/sup.html
@@ -65,7 +65,22 @@ h3{
     font-family: Apple;
     font-weight: bold;
    }
-
+   li{
+    font-family: Apple;
+        list-style-type: none;
+        color: rgb(255, 255, 255);
+        padding: 5px;
+        padding-left: 50px;
+        margin: 5px;
+        display: inline;
+        
+        font-size: 16px;
+        
+        font-feature-settings: 'kern';
+    -webkit-font-smoothing: antialiased;
+    font-synthesis: none;
+    -webkit-font-feature-settings: 'kern';
+}
 .lar{
     background:url(i.png) no-repeat left center; 
     background-size: 20px; 
