--- a/ind.html
+++ b/ind.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=0.6">
-<title>Pluton</title>
+<title>Titan</title>
 <link rel="icon" href="i.png" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css">
@@ -129,19 +129,6 @@ h1>a{
 <li><a href="about.html">About Us</a></li>
 
 
-<script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyA7Zx9JoY5q5rNnSoeyCvWD6diNMVBMjug",
-    authDomain: "pluto-39d83.firebaseapp.com",
-    databaseURL: "https://pluto-39d83.firebaseio.com",
-    projectId: "pluto-39d83",
-    storageBucket: "",
-    messagingSenderId: "145833631092"
-  };
-  firebase.initializeApp(config);
-</script>
 
 
 
@@ -206,7 +193,7 @@ h1>a{
 <center>
         <footer class="op">
             <br>
-               <h5> © 2018 Pluton Inc. All Rights Reserved.</h5>
+               <h5> © 2018 Titan Inc. All Rights Reserved.</h5>
                <br>
         
         </footer>
